@@ -12,14 +12,14 @@ struct screenconfig
 	char *strBackground;
 	int BgColor;
 	int FgColor;
-	int ContainerListRangeX1;
-	int ContainerListRangeX2;
-	int ContainerListRangeY1;
-	int ContainerListRangeY2;
-	int EntriesListRangeX1;
-	int EntriesListRangeX2;
-	int EntriesListRangeY1;
-	int EntriesListRangeY2;
+	int ContainerListRangeX1, ContainerListRangeX2, ContainerListRangeY1, ContainerListRangeY2;
+	int EntriesListRangeX1, EntriesListRangeX2, EntriesListRangeY1, EntriesListRangeY2;
+	int ContainerListTitleX, ContainerListTitleY, ContainerListTitleLen;
+	int ContainerListTitleUnselectedColor, ContainerListTitleSelectedColor;
+	char *strContainerListTitleUnselected, *strContainerListTitleSelected;
+	int EntriesListTitleX, EntriesListTitleY, EntriesListTitleLen;
+	int EntriesListTitleUnselectedColor, EntriesListTitleSelectedColor;
+	char *strEntriesListTitleUnselected, *strEntriesListTitleSelected;
 	int BufferPercentageX, BufferPercentageY, BufferPercentageColor;
 	int MetadataX1;
 	int MetadataRangeY1;
